--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p {
   margin-block-end: 1.5rem;
   width: 2.5rem;
   aspect-ratio: 1/1;
-  background: url('icon-star.svg') no-repeat center;
+  background: url('./images/icon-star.svg') no-repeat center;
   background-color: var(--medium-grey-trans);
   border-radius: 50%;
   padding: 1.5rem;
